[gd_scene load_steps=40 format=2]

[ext_resource path="res://Fonts/x12y16pxLineLinker.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ScoreControl.gd" type="Script" id=2]
[ext_resource path="res://HBoxStarContainer.gd" type="Script" id=3]
[ext_resource path="res://ResultStar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Textures/Character.png" type="Texture" id=5]
[ext_resource path="res://CharacterAnimatedSprite.gd" type="Script" id=6]
[ext_resource path="res://RetryLabel.gd" type="Script" id=7]
[ext_resource path="res://Result.gd" type="Script" id=8]
[ext_resource path="res://Sounds/shoot.mp3" type="AudioStream" id=9]
[ext_resource path="res://Sounds/graze.mp3" type="AudioStream" id=10]
[ext_resource path="res://Sounds/result.mp3" type="AudioStream" id=11]
[ext_resource path="res://Sounds/start.mp3" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 864, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 912, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 960, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 1008, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 1056, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 1104, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 432, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 528, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 576, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 624, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 672, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 720, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 816, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Dash",
"speed": 12.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "Default",
"speed": 12.0
} ]

[node name="Result" type="Node2D"]
script = ExtResource( 8 )

[node name="ResultUI" type="CanvasLayer" parent="."]

[node name="ScoreControl" type="Control" parent="ResultUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="ResultUI/ScoreControl"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -9.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
text = "0000"
align = 1

[node name="BackColorRect" type="ColorRect" parent="ResultUI/ScoreControl"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 18.0
margin_top = -8.0
margin_right = -17.0
margin_bottom = 11.0
color = Color( 0.764706, 0.337255, 0.360784, 1 )

[node name="FrontColorRect" type="ColorRect" parent="ResultUI/ScoreControl"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 18.0
margin_top = -8.0
margin_right = -17.0
margin_bottom = 11.0
color = Color( 0.984314, 0.94902, 0.211765, 1 )

[node name="HBoxStarContainer" type="HBoxContainer" parent="ResultUI/ScoreControl"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -22.0
margin_bottom = -11.0
alignment = 1
script = ExtResource( 3 )
result_star = ExtResource( 4 )

[node name="ShootSE" type="AudioStreamPlayer2D" parent="ResultUI/ScoreControl/HBoxStarContainer"]
stream = ExtResource( 9 )

[node name="GrazeSE" type="AudioStreamPlayer2D" parent="ResultUI/ScoreControl/HBoxStarContainer"]
stream = ExtResource( 10 )

[node name="ResultSE" type="AudioStreamPlayer2D" parent="ResultUI/ScoreControl"]
stream = ExtResource( 11 )

[node name="RetryLabel" type="Label" parent="ResultUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 60.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 2 )
text = "RETRY TAP"
align = 1
script = ExtResource( 7 )

[node name="CharacterAnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 68, 120 )
frames = SubResource( 27 )
animation = "Default"
playing = true
flip_h = true
script = ExtResource( 6 )

[node name="GameRetryTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="StartSE" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[connection signal="result_screen_tap" from="." to="CharacterAnimatedSprite" method="_on_Result_result_screen_tap"]
[connection signal="score_animated" from="ResultUI/ScoreControl" to="." method="_on_ScoreControl_score_animated"]
[connection signal="score_animated" from="ResultUI/ScoreControl" to="ResultUI/RetryLabel" method="_on_ScoreControl_score_animated"]
[connection signal="score_animated" from="ResultUI/ScoreControl" to="CharacterAnimatedSprite" method="_on_ScoreControl_score_animated"]
[connection signal="result_star_animated" from="ResultUI/ScoreControl/HBoxStarContainer" to="ResultUI/ScoreControl" method="_on_HBoxStarContainer_result_star_animated"]
[connection signal="timeout" from="GameRetryTimer" to="." method="_on_GameRetryTimer_timeout"]
